Fix markdown formatting in Batch 7 async programming and memory GC docs
- Fix MD022 heading blank line issues in memory allocator overview
- Fix MD032 list blank line issues in memory allocator overview
- Fix MD047 trailing newline in memory allocator overview
- Process async programming index and memory GC documents
- All 5 files now pass markdownlint validation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>